<resources>
    <string name="app_name">ListBuy</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_categories">Categories</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="testing">hey</string>
    <string name="background_description">background</string>
    <string name="add">Add</string>
    <string name="task_name">task name</string>
    <string name="addlist">addList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_list">New list</string>
    <string name="list_name">List Name</string>
    <string name="category">Category</string>
    <string name="listcategory">listCategory</string>
    <string name="prefs_file">com.example.listbuyapp.FILE_KEY</string>
    <string name="add_new_item">Add new item</string>
    <string name="item_name">Item Name</string>
    <string name="save">Save</string>
    <string name="price">Price by Unit</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="edit_item">Edit Item</string>
</resources>